# CryptoChallange

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
Zusatsmaterialien/Aufgabe/: BeispielAngriffd3.txt  BeispielAngriffd5.txt  BeispielAngriffd7.txt  kryptochallengegruppe1.txt  kryptochallengegruppe10.txt  kryptochallengegruppe11.txt  kryptochallengegruppe12.txt  kryptochallengegruppe13.txt  kryptochallengegruppe14.txt  kryptochallengegruppe2.txt  kryptochallengegruppe3.txt  kryptochallengegruppe4.txt  kryptochallengegruppe5.txt  kryptochallengegruppe6.txt  kryptochallengegruppe7.txt  kryptochallengegruppe8.txt  kryptochallengegruppe9.txt
Zusatsmaterialien/Beispiele/: BeispielAngriffd3.txt  BeispielAngriffd5.txt  BeispielAngriffd7.txt  BeispielAngriffd7mitrelcheck.txt
